fix: resort to auto width. auto means takes available space always in flexbox. 100% means take up the whole widthof the parent container. margin causes overflow

--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -6,10 +6,9 @@
 		background-color: var(--yellow);
 		.hero-h1-row {
 			display: flex;
-			margin: 0 40px;
+			margin: 40px 40px;
             column-gap: 8px;
 			// background-color: blue;
-
 		}
 		.hero-menu-row {
 			margin: 0 40px;
